--- a/mainpage.html
+++ b/mainpage.html
@@ -6,115 +6,195 @@
     <title>Master Budget</title>
     <link rel="shortcut icon" type="image/ico" href="style/images/favicon.ico">
     <style>
-        body{
+        /* General Styles */
+        body {
             overflow: hidden;
             margin: 0;
             padding: 0;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-family: Verdana;
+            background-color: #f0f4f8;
         }
-      
-        .main_div{
+
+        /* Main Container */
+        .main_div {
             display: flex;
             height: 100vh;
         }
 
-        .menubar{
+        /* Menubar Styles */
+        .menubar {
             margin: 0;
-            padding: 10px;
+            padding: 20px;
             overflow: hidden;
             background-color: #023047;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-family: verdana;
             flex: 2;
             height: 100%;
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
         }
-        .contener_div{
+
+        .menubar .heading {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .menubar .heading img {
+            height: 100px;
+            width: 150px;
+        }
+
+        .menubar ul {
+            padding: 0;
+            margin: 0;
+        }
+
+        .menubar ul li {
+            list-style: none;
+            padding: 15px 20px;
+            margin: 10px 0;
+            border-radius: 8px;
+            text-align: left;
+            transition: all 0.3s ease;
+            color: white;
+            cursor: pointer;
+        }
+
+        .menubar ul li:hover {
+            background-color: #f0f4f8;
+            color: #023047;
+            transform: translateX(5px);
+        }
+
+        a {
+            text-decoration: none;
+            color: white;
+            display: block;
+        }
+
+        /* Content Container */
+        .contener_div {
             flex: 10;
             display: flex;
             flex-direction: column;
         }
-        .headersid{
+
+        /* Header Styles */
+        .headersid {
             flex: 2;
             display: flex;
-            justify-content: space-evenly;
+            justify-content: space-between;
             align-items: center;
-            padding: 0% 3%;
+            padding: 0 3%;
+            background-color: #ffffff;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-        .header_Title{
-            flex: 2;
-        }
-        .contents{
-            flex: 10;
-            height: 100%;
-        }
-        .heading{
-            margin: 20px;
-        }
-        a{
-            text-decoration: none;
-            color: white;
 
+        .header_Title {
+            flex: 2;
+            text-align: center;
         }
-        li{
-            list-style: none;
-            padding: 15px;
-            border-radius: 10px 0px 0px 10px;
-            text-align: left;
-        }
-        li:hover{
-            background-color: #219ebc;
-        }
-        h1{
+
+        .header_Title h1 {
             color: #023047;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-size: 2.5rem;
+            margin: 0;
         }
-        h5{
-            color:#023047;
+
+        .logout h5 {
+            color: #023047;
             cursor: pointer;
             padding: 10px;
+            transition: color 0.3s ease;
+        }
+
+        .logout img {
+            width: 30px;
+            height: 30px;
+        }
+
+        /* Content Area */
+        .contents {
+            flex: 10;
+            height: 100%;
+            background-color: #f0f4f8;
+            padding: 20px;
+        }
+
+        iframe {
+            border: none;
+            width: 100%;
+            height: 100%;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Logout Confirmation */
+        .logout-confirm {
+            background-color: #023047;
+            color: white;
+            padding: 20px;
+            border-radius: 8px;
+            text-align: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .menubar {
+                flex: 1;
+                padding: 10px;
+            }
+
+            .header_Title h1 {
+                font-size: 2rem;
+            }
+
+            .menubar ul li {
+                padding: 10px 15px;
+            }
         }
     </style>
 </head>
 <body>
     <div class="main_div">
         <div class="menubar">
-
             <div class="main">
                 <div class="heading">
                     <img src="style/images/logo.png" alt="Master Budget" height="100px" width="150px">
                 </div>
                 <ul>
                     <a href="deshboard.php" target="tframe"><li>Dashboard</li></a>
-                    <!--<a href="frame pages/transaction.php" target="tframe"><li>Transaction</li></a>-->
                     <a href="frame pages/income.php" target="tframe"><li>Income</li></a>
                     <a href="frame pages/expense.php" target="tframe"><li>Expenses</li></a>
                     <a href="frame pages/investment.php" target="tframe"><li>Investment</li></a>
-                    <a href="frame pages/taxCalculate.php" target="tframe"><li>Tax Benefites</li></a>
-                    <a href="frame pages/tablePDF.php" target="tframe"><li>Repoart</li></a>
+                    <a href="frame pages/taxCalculate.php" target="tframe"><li>Tax Benefits</li></a>
+                    <a href="frame pages/tablePDF.php" target="tframe"><li>Report</li></a>
                 </ul>
             </div>
         </div>
         <div class="contener_div">
             <div class="headersid">
                 <div class="header_Title" align="center">
-                    <!--<img src="style/images/Master Budget Logo.png" alt="Master Budget" height="100px" width="50%">-->
                     <h1>MASTER BUDGET</h1>
                 </div>
                 <div class="logout">
-                    <h5 onclick="lout()"><abbr title="Log Out"><img src="style/images/logout.svg" alt="" width="30px"></abbr></h5>
+                    <h5 onclick="lout()"><abbr title="Log Out"><img src="style/images/logout.svg" alt="Log Out" width="30px"></abbr></h5>
                 </div>
             </div>
             <div class="contents">
-                <iframe src="deshboard.php" frameborder="0" name="tframe" height="100%" width="100%"></iframe>
+                <iframe src="deshboard.php" frameborder="0" name="tframe"></iframe>
             </div>
         </div>
     </div>
-    <script> 
-        function lout(){
-            if(confirm("Do you want to Log Out")){
+    <script>
+        function lout() {
+            if (confirm("Do you want to Log Out?")) {
                 window.close();
-                window.open('index.php','_self');
+                window.open('index.php', '_self');
+                window.history.clear();
             }
         }
-        </script>
+    </script>
 </body>
 </html>
