--- a/mainpage.html
+++ b/mainpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Master Budget</title>
-    <link rel="shortcut icon" type="image/ico" href="style/images/favicon.ico">
+    <link rel="shortcut icon" type="image/ico" href="../MasterBudgets/style/images/logo.png" >
     <style>
         /* General Styles */
         body {
@@ -14,7 +14,7 @@
             font-family: Verdana;
             background-color: #f0f4f8;
         }
-
+        
         /* Main Container */
         .main_div {
             display: flex;
@@ -161,7 +161,7 @@
         <div class="menubar">
             <div class="main">
                 <div class="heading">
-                    <img src="style/images/logo.png" alt="Master Budget" height="100px" width="150px">
+                    <img src="style/images/logo.png" alt="Master Budget" width="100px" height="100px"/>
                 </div>
                 <ul>
                     <a href="deshboard.php" target="tframe"><li>Dashboard</li></a>
