--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In</title>
-    <link rel="shortcut icon" type="image/ico" href="style/images/favicon.ico">
+    <link rel="shortcut icon" type="image/ico" href="../MasterBudgets/style/images/logo.png">
     <link rel="stylesheet" href="style/login.css">
 </head>
 <body align="center">
