--- a/addBank.html
+++ b/addBank.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style/login.css">
 </head>
 <body>
+    <div class="back" align="left">
+        <h5 onclick="back()"><abbr title="Back"><img src="style/images/back.svg" alt="Log Out" width="30px"></abbr></h5>
+        <script>
+            function back(){
+            window.history.back();
+        }
+        </script>
+    </div>
     <div class="incexp">
         
         <FORM method="post" action="addBank.php">
